RESOLVED FIXED147631
Network cache fetches should have timeout
https://bugs.webkit.org/show_bug.cgi?id=147631
Summary Network cache fetches should have timeout
Antti Koivisto
Reported 2015-08-04 09:54:10 PDT
System might be under heavy I/O pressure. If it takes long time to get data from disk we should load from network instead.
Attachments
patch (9.31 KB, patch)
2015-08-04 11:43 PDT, Antti Koivisto
kling: review+
Chris Dumez
Comment 1 2015-08-04 10:15:01 PDT
I am a little bit skeptical about this. Fetching from the network in general is very slow (outside simulated tests) and bad for battery life.
Antti Koivisto
Comment 2 2015-08-04 11:43:59 PDT
Antti Koivisto
Comment 3 2015-08-04 11:47:50 PDT
(In reply to comment #1) > I am a little bit skeptical about this. Fetching from the network in general > is very slow (outside simulated tests) and bad for battery life. We have spintraces where system is crawling because heavy I/O load (generally systems with spinning disks). It is better to keep the browser functional. The timeout is very long (1s) should not get hit under any normal circumstances.
Andreas Kling
Comment 4 2015-08-04 23:03:47 PDT
Comment on attachment 258192 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=258192&action=review r=me At first I was skeptical. But 1 second timeout on disk read -- okay, we're pretty damn hosed. > Source/WebKit2/ChangeLog:10 > + This patch introduces 1s second timeout for disk reads. If the last dispatched cache read takes longer than that we cancel all "1s second timeout"
Antti Koivisto
Comment 5 2015-08-05 03:28:08 PDT
Note You need to log in before you can comment on or make changes to this bug.