Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h
@@ -107,12 +107,13 @@ private:
     void shrink();
 
     struct ReadOperation;
-    void dispatchReadOperation(ReadOperation&);
+    void dispatchReadOperation(std::unique_ptr<ReadOperation>);
     void dispatchPendingReadOperations();
     void finishReadOperation(ReadOperation&);
+    void cancelAllReadOperations();
 
     struct WriteOperation;
-    void dispatchWriteOperation(WriteOperation&);
+    void dispatchWriteOperation(std::unique_ptr<WriteOperation>);
     void dispatchPendingWriteOperations();
     void finishWriteOperation(WriteOperation&);
 
@@ -150,6 +151,7 @@ private:
     static const int maximumRetrievePriority = 4;
     Deque<std::unique_ptr<ReadOperation>> m_pendingReadOperationsByPriority[maximumRetrievePriority + 1];
     HashSet<std::unique_ptr<ReadOperation>> m_activeReadOperations;
+    WebCore::Timer m_readOperationTimeoutTimer;
 
     Deque<std::unique_ptr<WriteOperation>> m_pendingWriteOperations;
     HashSet<std::unique_ptr<WriteOperation>> m_activeWriteOperations;
